# wfrp.character

./: .env.railway  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  TODO.md  careers_empty.py  constraints.txt  development.ini  local.ini  main.py  pyproject.toml  railway.ini  setup.cfg  setup.py
.github/workflows/: python-app.yml
docs/: HISTORY.md  empty.md  relationships.md
favicon_io/: about.txt
src/wfrp/character/: application.py  armour_data.py  career_data.py  career_list.py  career_skills.py  exceptions.py  init_db.py  models.py  routes.py  security.py  skill_data.py  species_list.py  switches.py  talent_data.py  talent_list.py  talents_data.py  trappings.py  utils.py  validators.py  weapons_data.py  widgets.py
src/wfrp/character/data/: armour.py  career_tables.py  careers.py  class_trappings.py  expansions.py  qualities.py  religions.py  skills.py  species.py  species_norse.py  species_standard.py  species_tilean.py  talents.py  trappings.py  weapons.py
src/wfrp/character/data/careers/: academics.py  burghers.py  careers.py  courtiers.py  deft_steps.py  peasants.py  rangers.py  riverfolk.py  rogues.py  seafarer.py  tables.py  up_in_arms.py  warriors.py  winds_of_magic.py
src/wfrp/character/data/magic/: arcane.py  arcane_winds_of_magic.py  bless.py  chanty.py  colour_magic.py  colour_winds_of_magic.py  deft_steps.py  miracles.py  petty.py  spells.py
src/wfrp/character/forms/: edit_campaign.py  edit_character.py
src/wfrp/character/forms/create/: advances.py  attributes.py  career.py  career_skills.py  details.py  name.py  new_character.py  species.py  species_skills.py  trappings.py
src/wfrp/character/models/: campaign.py  character.py  experience.py  user.py
src/wfrp/character/static/: bootstrap.css  character-sheet.css  fonts.css  print-new.css  print.css  wfrp.css
src/wfrp/character/templates/: about.pt  about_text.pt  about_warning.pt  account.pt  account_delete.pt  advances.pt  attributes.pt  buy_coffee.pt  campaign.pt  campaign_form.pt  career.pt  career_skills.pt  character.pt  character_characteristics.pt  character_sheet.pt  details.pt  experience.pt  footer.pt  form.pt  google_login.pt  homepage.pt  layout.pt  links.pt  login.pt  name.pt  pdf.pt  profile.pt  register.pt  species.pt  species_skills.pt  summary.pt  trappings.pt
src/wfrp/character/templates/character_macros/: ambitions.pt  armour.pt  armour_layout.pt  attributes.pt  character_summary.pt  characteristics.pt  corruption.pt  details.pt  encumberance.pt  encumbrance.pt  experience.pt  fate.pt  movement.pt  party.pt  psychology.pt  resilience.pt  skills.pt  skills_advanced.pt  skills_left.pt  skills_right.pt  spells.pt  talents.pt  trappings.pt  wealth.pt  weapons.pt  wounds.pt
src/wfrp/character/templates/character_macros_old/: ambitions.pt  armour.pt  armour_layout.pt  character_summary.pt  corruption.pt  details.pt  encumberance.pt  experience.pt  psychology.pt  skills_left.pt
src/wfrp/character/templates/exceptions/: 403.pt  404.pt
src/wfrp/character/templates/forms/: base_form.pt  campaign.pt  experience.pt  register.pt  skills.pt
src/wfrp/character/templates/homepage/: home_auth.pt  home_local.pt  homepage.pt
src/wfrp/character/templates/includes/: about_text.pt  buy_coffee.pt  flash_message.pt  footer.pt  github_corner.pt
src/wfrp/character/views/: about.py  account.py  advances.py  attributes.py  auth.py  base_view.py  campaign.py  campaign_session.py  career.py  career_skills.py  character.py  details.py  edit_campaign.py  edit_character.py  exceptions.py  experience.py  experience_gain.py  experience_talent.py  homepage.py  links.py  name.py  new_character.py  profile.py  species.py  species_skills.py  transfer_character.py  trappings.py  update_character.py
src/wfrp/character/views/create_character/: advances.py  attributes.py  base_create.py  campaign.py  career.py  career_skills.py  details.py  expansions.py  name.py  new_character.py  religion.py  species.py  species_skills.py  spells.py  sub_career.py  trappings.py
tests/: conftest.py  factories.py  test_account.py  test_account_delete.py  test_campaign.py  test_careers.py  test_character_delete.py  test_create_advances.py  test_create_attributes.py  test_create_campaign.py  test_create_careers.py  test_create_details.py  test_create_expansions.py  test_create_name.py  test_create_new_character.py  test_create_skills.py  test_create_skills_career.py  test_create_skills_species.py  test_create_species.py  test_create_spells.py  test_create_sub_career.py  test_create_trappings.py  test_data_careers.py  test_data_class_trappings.py  test_data_miracles.py  test_data_skills.py  test_data_talents.py  test_data_trappings.py  test_edit_campaign.py  test_edit_character.py  test_exceptions.py  test_experience.py  test_factories.py  test_model_campaign.py  test_model_character.py  test_model_experience.py  test_model_user.py  test_models.py  test_package.py  test_register.py  (+21 more)
(+1 files in other folders)
