[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta:__legacy__"

[tool.pytest.ini_options]
filterwarnings = ["ignore::DeprecationWarning:pkg_resources"]
markers = [
    "models",
    "package",
    "views",
]
testpaths = "tests"

[tool.isort]
profile = "black"
force_single_line = true
