[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
filterwarnings = [
    "ignore::DeprecationWarning:pkg_resources",
    "ignore::DeprecationWarning:importlib",
    "ignore::DeprecationWarning:webob",
]
markers = [
    "account",
    "campaign",
    "character",
    "create",
    "data",
    "edit",
    "factories",
    "forms",
    "models",
    "package",
    "register",
    "views",
]
testpaths = "tests"

[tool.isort]
profile = "black"
force_single_line = true
force_sort_within_sections = true
