[metadata]
name = wfrp.character
version = attr: wfrp.character.__version__
author = Michael Davis
author_email = m.r.davis@me.com
description = Character generator for Warhammer Fantasy Roleplay Version 4.
long_description = file: README.md, docs/HISTORY.md

[options]
zip_safe = False
packages = find_namespace:
package_dir =
    =src
install_requires =
    bcrypt
    deform
    pyramid
    pyramid_chameleon
    pyramid_debugtoolbar
    pytest_factoryboy
    pyramid_tm
    sqlalchemy
    waitress
    weasyprint
    zope.sqlalchemy

[options.extras_require]
testing =
    black
    flake8
    isort
    pre-commit
    WebTest
    pytest < 8.4.0
    pytest-cov

[options.packages.find]
where = src
exclude =
    tests

[options.package_data]
* =
    *.pt
    static/*

[options.entry_points]
console_scripts =
    init_db = wfrp.character.init_db:main
paste.app_factory =
    main = wfrp.character.application:main

[tool:pytest]
testpaths = tests
markers =
    package: package level tests

[flake8]
max-line-length = 88
extend-ignore = E203
max-complexity = 10

[isort]
force_single_line = true
force_sort_within_sections = true
