[metadata]
name = wfrp.character
version = attr: wfrp.character.__version__
author = Michael Davis
author_email = m.r.davis@me.com
description = Character generator for Warhammer Fantasy Roleplay Version 4.
long_description = file: README.md, docs/HISTORY.md

[options]
python_requires = >=3.10
zip_safe = False
packages = find_namespace:
package_dir =
    =src
install_requires =
    deform
    pyramid
    pyramid_chameleon
    pyramid_debugtoolbar
    pyramid-googleauth
    pyramid_tm
    pytest_factoryboy
    python-dotenv
    sqlalchemy
    waitress
    weasyprint
    zope.sqlalchemy
    # pin this for now
    google-auth-oauthlib<1.3

[options.extras_require]
testing =
    black
    flake8
    freezegun
    isort
    pre-commit
    WebTest
    pytest
    pytest-cov

[options.packages.find]
where = src
exclude =
    tests

[options.package_data]
* =
    *.pt
    static/*
    static/fonts/*

[options.entry_points]
console_scripts =
    init_db = wfrp.character.init_db:main
paste.app_factory =
    main = wfrp.character.application:main

[flake8]
max-line-length = 88
extend-ignore = E203
max-complexity = 10
